# backend

./: Cargo.toml  docker-compose.yml
crates/auth/: Cargo.toml
crates/auth/src/: config.rs  main.rs
crates/auth/src/models/: claims.rs  mod.rs  permissions.rs  roles.rs  user.rs
crates/auth/src/services/: auth.rs
crates/auth/src/utils/: crypto.rs
crates/storage/: Cargo.toml
crates/storage/src/: main.rs
