[workspace]
members = ["crates/auth", "crates/storage"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = ""
rust-version = "1.83.0"

[workspace.dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.216", features = ["derive"] }

[profile.dev]

[profile.release]
