[package]
name = "auth"
version = "0.1.0"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
bitflags = { version = "2.6.0", features = ["serde"] }

thiserror = "2.0.8"
jsonwebtoken = "9.3.0"
rust-argon2 = "2.1.0"
aes-gcm = "0.10.3"
chrono = "0.4.39"
strum = "0.26.3"
strum_macros = "0.26.4"
